# openenclave

./: CMakeLists.txt  notes.txt
.jenkins/provision/templates/packer/: ubuntu-16.04-variables.json  ubuntu-18.04-variables.json  win-2016-variables.json  win-dcap-variables.json
common/: argv.c  common.h  oe_host_stdio.h
docs/: DevelopmentGuide.md
enclave/: asym_keys.c  tls_cert.c
enclave/core/: CMakeLists.txt  arena.c  atexit.c  backtrace.c  calls.c  calls.h  debugmalloc.c  errno.c  gmtime.c  hostcalls.c  intstr.c  malloc.c  printf.c  pthread.c  stdio.c  strerror.c  string.c  strtok_r.c  strtoul.c  switchlesscalls.c  tee_t_wrapper.c  time.c  tracee.c  tracee.h
enclave/core/include/: README.md  endian.h  errno.h  limits.h  sched.h  stdint.h  stdio.h  stdlib.h  string.h  wchar.h
enclave/core/include/dlmalloc/: errno.h  sched.h  stddef.h  stdio.h
enclave/core/include/edger8r/: stdint.h  stdlib.h  string.h  wchar.h
enclave/core/include/musl/: endian.h  limits.h  time.h
enclave/core/optee/: gp.c  hostcalls.c  thread.c
enclave/core/sgx/: asmdefs.h  backtrace.c  calls.c  entropy.c  keys.c  report.c  sgx_t_wrapper.c  td.c  thread.c
enclave/sgx/: attester.c  revocationinfo.c
ext/common/: ext.c
ext/enclave/: ext.c
ext/host/: ext.c
host/: CMakeLists.txt  calls.c  calls.h  tee_u_wrapper.c  traceh.c
host/optee/linux/: enclave.c
host/sgx/: calls.c  create.c  sgx_u_wrapper.c
host/windows/: hostthread.c
include/openenclave/: enclave.h
include/openenclave/bits/: ext.h
include/openenclave/corelibc/: limits.h  stdio.h  stdlib.h  unistd.h
include/openenclave/internal/: calls.h  defs.h  print.h  types.h
include/openenclave/syscall/: common.h  device.h  dirent.h  fcntl.h  fd.h  fdtable.h  iov.h  netdb.h  poll.h  raise.h  realpath.h  rename.h  resolver.h  string.h  unistd.h
libc/: CMakeLists.txt  atexit.c  errno.c  exit.c  malloc.c  pthread.c  sched_yield.c  strerror.c  strerror_l.c  syscalls.c
pkgconfig/: CMakeLists.txt
scripts/: .check-license.ignore
syscall/: CMakeLists.txt  consolefs.c  consolefs.h  device.c  dirent.c  epoll.c  fcntl.c  fdtable.c  ioctl.c  iov.c  mount.c  mount.h  netdb.c  notes.txt  poll.c  select.c  socket.c  stat.c  stdio.c  stdlib.c  strtok_r.c  syscall.c  syscall_t_wrapper.c  unistd.c  utsname.c
syscall/devices/hostepoll/: CMakeLists.txt  hostepoll.c
syscall/devices/hostfs/: CMakeLists.txt  hostfs.c
syscall/devices/hostresolver/: CMakeLists.txt  hostresolver.c
syscall/devices/hostsock/: CMakeLists.txt  hostsock.c
syscall/edl/: CMakeLists.txt  syscall.edl
syscall/enclave/: CMakeLists.txt  consolefs.c  consolefs.h  device.c  dirent.c  epoll.c  fcntl.c  fdtable.c  ioctl.c  iov.c  log.c  mount.c  mount.h  musl.c  netdb.c  poll.c  select.c  socket.c  stat.c  stdio.c  stdlib.c  strdup.c  strtok_r.c  syscall.c  syscall_t_wrapper.c  tests.c  unistd.c  utsname.c
syscall/host/: CMakeLists.txt  oe_host_socket.h  syscall.c  syscall_u_wrapper.c  tests.c
syscall/host/linux/: syscall.c
syscall/host/windows/: syscall.c
syscall/include/: CMakeLists.txt
syscall/include/corelibc/: string.h
syscall/include/edger8r/: errno.h  wchar.h
syscall/include/syscall/: common.h  device.h  dirent.h  fcntl.h  fd.h  fdtable.h  iov.h  limits.h  module.h  netdb.h  realpath.h  resolver.h  string.h  types.h  unistd.h
syscall/tests/: CMakeLists.txt
syscall/tests/datagram/: test_datagram.edl
syscall/tests/datagram/host/: CMakeLists.txt  host.c
syscall/tests/dup/: test_dup.edl
syscall/tests/dup/enc/: enc.c  (+1 more)
syscall/tests/dup/host/: CMakeLists.txt  host.c
syscall/tests/epoll/: epoll.edl
syscall/tests/epoll/enc/: CMakeLists.txt  enc.cpp
syscall/tests/epoll/host/: CMakeLists.txt
syscall/tests/fs/: fs.edl
syscall/tests/fs/enc/: CMakeLists.txt  enc.cpp  file_system.h
syscall/tests/fs/host/: CMakeLists.txt  host.c
syscall/tests/hostfs/: test_hostfs.edl
syscall/tests/hostfs/enc/: CMakeLists.txt  enc.c
syscall/tests/hostfs/host/: CMakeLists.txt  host.c
syscall/tests/ids/: test_ids.edl
syscall/tests/ids/enc/: CMakeLists.txt  enc.c
syscall/tests/ids/host/: CMakeLists.txt  host.c
syscall/tests/poller/: poller.edl
syscall/tests/poller/enc/: CMakeLists.txt  enc.cpp
syscall/tests/resolver/: resolver_test.edl  utils.h
syscall/tests/resolver/enc/: CMakeLists.txt  enc.c
syscall/tests/resolver/host/: CMakeLists.txt
syscall/tests/sendmsg/: README.md  sendmsg.edl
syscall/tests/sendmsg/enc/: CMakeLists.txt  enc.c
syscall/tests/sendmsg/host/: CMakeLists.txt
syscall/tests/socket/: socket_test.edl
syscall/tests/socket/enc/: CMakeLists.txt  enc.c
syscall/tests/socket/host/: CMakeLists.txt
syscall/tests/socketpair/: socketpair_test.edl
syscall/tests/socketpair/enc/: CMakeLists.txt  enc.c
syscall/tests/socketpair/host/: CMakeLists.txt  host.c
syscall/tests/syscall/datagram/enc/: CMakeLists.txt  enc.c
syscall/tests/syscall/dup/enc/: CMakeLists.txt  enc.c
syscall/tests/syscall/epoll/enc/: CMakeLists.txt  enc.cpp
syscall/tests/syscall/epoll/host/: CMakeLists.txt  host.cpp
syscall/tests/syscall/hostfs/enc/: CMakeLists.txt  enc.c
syscall/tests/syscall/ids/enc/: CMakeLists.txt  enc.c
syscall/tests/syscall/ids/host/: CMakeLists.txt  host.c
tests/: CMakeLists.txt
tests/bigmalloc/enc/: enc.c
tests/crypto/: asn1_tests.c  read_file.c
tests/ecall/enc/: enc.cpp
tests/echo/enc/: enc.c
tests/hostcalls/enc/: enc.cpp
tests/libc/: tests.cmake
tests/libc/enc/: CMakeLists.txt  enc.c
tests/libunwind/enc/: enc.c
tests/mbed/enc/: enc.c  selftest_wrapper.c
tests/ocall/enc/: enc.cpp
tests/oeedger8r/enc/: testdeepcopy.cpp
tests/oeext/: CMakeLists.txt  oeext.edl
tests/oeext/enc/: enc.c
tests/oeext/host/: host.c
tests/pingpong/host/: host.cpp
tests/report/common/: tests.cpp
tests/stdcxx/enc/: enc.cpp
tests/switchless/enc/: enc.c
tests/switchless_threads/enc/: enc.c
tests/tls_e2e/client_enc/: CMakeLists.txt  client.cpp
tests/tls_e2e/common/: utility.h
tests/tls_e2e/host/: CMakeLists.txt
tests/tls_e2e/server_enc/: server.cpp
tests/tools/: CMakeLists.txt
tools/oeext/: main.c
(+145 files in other folders)
